# simple_smtp_client

./: CMakeLists.txt  Readme.md  test_runner.sh
resources/: message_storage_sample.json  sample_smtp_state_diagram.drawio  test_message
src/: CMakeLists.txt  common.h  logger_wrapper.h  main.cpp  message.cpp  message.h  responses_parser.cpp  responses_parser.h  smtp_client.cpp  smtp_client.h  smtp_client_application.cpp  smtp_client_application.h
src/smtp_protocol/: connection_state.cpp  connection_state.h  data_init_state.cpp  data_init_state.h  end_state.cpp  end_state.h  error_state.cpp  error_state.h  fill_data_state.cpp  fill_data_state.h  helo_state.cpp  helo_state.h  mail_from_state.cpp  mail_from_state.h  quit_state.cpp  quit_state.h  rcpt_to_state.cpp  rcpt_to_state.h  smtp_state.cpp  smtp_state.h
src/validators/: file_exists_validator.cpp  file_exists_validator.h  port_option_validator.cpp  port_option_validator.h
